# aoc_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
data/2024/01/: part_2.txt
data/2024/04/: example_2.txt
lib/cli/: Cargo.toml
lib/cli/src/: lib.rs  part.rs  util.rs
lib/util/: Cargo.toml
lib/util/src/: counting.rs  io.rs  lib.rs
lib/util/src/data/: array_2d_core.rs  matrix.rs  mod.rs  table.rs
tools/aoc_downloader/: Cargo.toml
tools/aoc_downloader/src/: main.rs
years/aoc_2024/: Cargo.toml
years/aoc_2024/grammars/: d3.pest
years/aoc_2024/src/: d1.rs  d2.rs  d3.rs  d4.rs  main.rs
