[package]
name = "aoc_downloader"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
cli = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "string"] }
dotenv = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
