[package]
name = "aoc_2024"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "string"] }
cli = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
rug = { workspace = true, features = ["serde"] }
util = { workspace = true }
